--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "npm run lint:js",
-    "lintfix": "npm run lint:js -- --fix"
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@nuxtjs/prismic": "^1.4.2",
     "@nuxtjs/pwa": "^3.3.5",
+    "@prismicio/slice-simulator-vue": "^0.2.1",
     "core-js": "^3.19.3",
     "gsap": "^3.11.3",
     "nuxt": "^2.15.8",
@@ -27,8 +27,10 @@
     "@babel/eslint-parser": "^7.16.3",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@prismicio/types": "^0.2.4",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^8.2.0",
+    "slice-machine-ui": "^0.5.2"
   }
 }
