added prismic work page to display projects, added dynamic project page using prismic to display a clicked project on work page, fixed every slice zone

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -1,6 +1,7 @@
 {
   "_cts": {
-    "work": {}
+    "work": {},
+    "work_page": {}
   },
   "slices": {
     "TextSlice": {
@@ -40,6 +41,23 @@
       }
     },
     "TriImageSlice": {
+      "default": {
+        "primary": {}
+      }
+    },
+    "WorkProjectSlice": {
+      "default": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
+      }
+    },
+    "DualImageSlice": {
       "default": {
         "primary": {}
       }
