--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/robots": "^3.0.0",
     "@prismicio/slice-simulator-vue": "^0.2.1",
+    "@vercel/analytics": "^0.1.8",
     "core-js": "^3.19.3",
     "gsap": "^3.11.3",
     "nuxt": "^2.15.8",
